# log4rs-email

./: Cargo.toml  README.md
data/: test.yaml
src/: lib.rs  log4rs_email.rs
