[package]
name = "log4rs-email"
version = "0.1.0"
authors = ["John Newby <john@newby.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gethostname = "0.2"
lazy_static = { version = "1.0", default_features = false }
lettre = "0.9"
lettre_email = "0.9"
log = { version = "0.4", default_features = false }
log4rs = { version = "0.8.3", features = ["simple_writer", "pattern_encoder" ] }
mailin-embedded = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
